# pangea-google-python-genai

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pangea_google_genai/: client.py  models.py
